2022-11-22T08:21:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3521578698 # 636
* notice: last 14d: unq all: 2 20
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 260 472
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 261 473
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-22]

2022-11-22T01:21:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3519520050 # 635
* notice: last 14d: unq all: 2 19
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 260 471
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 260 472
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-21]

2022-11-21T16:21:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3516182860 # 634
* notice: last 14d: unq all: 2 18
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 259 470
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 260 471
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-21]

2022-11-21T01:20:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3510657707 # 632
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 259 469
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 259 470
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-20]

2022-11-20T08:18:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3507138723 # 630