@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-22T08:21:04Z",
+  "timestamp" : "2022-11-23T01:12:53Z",
   "count_outdated" : 453,
   "uniques_outdated" : 250,
-  "count" : 473,
+  "count" : 474,
   "uniques" : 261,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
