@@ -1,3 +1,11 @@
+2022-11-23T01:12:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3528398907 # 638
+* notice: last 14d: unq all: 2 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 261 473
+* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 261 474
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-22]
+
 2022-11-22T08:21:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3521578698 # 636
 * notice: last 14d: unq all: 2 20
